--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -392,7 +392,7 @@
 
         <activity android:name=".SubSettings$BluetoothSubSettings"
                 android:taskAffinity="com.android.settings"
-                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
                 android:parentActivityName="Settings">
         </activity>
 
